--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "19.0.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
+    "sonner": "^2.0.1",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
