--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "dayjs": "^1.11.13",
+    "framer-motion": "^12.7.2",
     "lucide-react": "^0.468.0",
     "next": "latest",
     "next-pwa": "^5.6.0",
@@ -33,6 +34,7 @@
     "react-dom": "19.0.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
+    "react-onesignal": "^3.2.2",
     "rrule": "^2.8.1",
     "sonner": "^2.0.3",
     "zod": "^3.24.2",
