Use vaul for datepicker sheet

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-onesignal": "^3.2.2",
     "rrule": "^2.8.1",
     "sonner": "^2.0.3",
+    "vaul": "^1.1.2",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
